@tool
extends Window

# Ø¥Ø´Ø§Ø±Ø§Øª (Signals) Ù„Ù†Ø¹Ø±Ù Ù‚Ø±Ø§Ø± Ø§Ù„Ù…Ø³ØªØ®Ø¯Ù…
signal applied
signal rejected

@onready var old_edit: CodeEdit = %OldEdit
@onready var new_edit: CodeEdit = %NewEdit
@onready var apply_btn: Button = %ApplyBtn
@onready var reject_btn: Button = %RejectBtn

func _ready() -> void:
	# Ø±Ø¨Ø· Ø¥Ø´Ø§Ø±Ø© Ø§Ù„Ø¥ØºÙ„Ø§Ù‚ ( Ø²Ø± X ÙÙŠ Ø§Ù„Ù†Ø§ÙØ°Ø©)
	close_requested.connect(_on_reject_pressed)
	
	# Ø±Ø¨Ø· Ø§Ù„Ø£Ø²Ø±Ø§Ø± Ø¥Ø°Ø§ ÙƒØ§Ù†Øª Ù…ÙˆØ¬ÙˆØ¯Ø©
	if apply_btn: apply_btn.pressed.connect(_on_apply_pressed)
	if reject_btn: reject_btn.pressed.connect(_on_reject_pressed)

# Ø¯Ø§Ù„Ø© Ø§Ù„Ø§Ø³ØªØ¯Ø¹Ø§Ø¡ Ø§Ù„Ø±Ø¦ÙŠØ³ÙŠØ©: Ù†Ø±Ø³Ù„ Ù„Ù‡Ø§ Ø§Ù„Ù†Øµ Ø§Ù„Ù‚Ø¯ÙŠÙ… ÙˆØ§Ù„Ø¬Ø¯ÙŠØ¯
func setup_diff(old_text: String, new_text: String):
	old_edit.text = old_text
	new_edit.text = new_text
	
	_highlight_changes(old_text, new_text)
	
	# Ø¥Ø¸Ù‡Ø§Ø± Ø§Ù„Ù†Ø§ÙØ°Ø© ÙÙŠ Ø§Ù„Ù…Ù†ØªØµÙ
	popup_centered()

func _on_apply_pressed():
	applied.emit() # Ù†Ø±Ø³Ù„ Ø¥Ø´Ø§Ø±Ø© Ø§Ù„Ù…ÙˆØ§ÙÙ‚Ø©
	queue_free()   # Ù†ØºÙ„Ù‚ Ø§Ù„Ù†Ø§ÙØ°Ø©

func _on_reject_pressed():
	rejected.emit() # Ù†Ø±Ø³Ù„ Ø¥Ø´Ø§Ø±Ø© Ø§Ù„Ø±ÙØ¶
	queue_free()    # Ù†ØºÙ„Ù‚ Ø§Ù„Ù†Ø§ÙØ°Ø©

# ğŸ¨ Ø®ÙˆØ§Ø±Ø²Ù…ÙŠØ© ØªÙ„ÙˆÙŠÙ† Ø§Ù„ÙØ±ÙˆÙ‚Ø§Øª (Ø¨Ø³ÙŠØ·Ø©)
func _highlight_changes(t1: String, t2: String):
	var lines1 = t1.split("\n")
	var lines2 = t2.split("\n")
	var max_lines = max(lines1.size(), lines2.size())
	
	var color_added = Color(0, 1, 0, 0.15)   # Ø£Ø®Ø¶Ø± ÙØ§ØªØ­ Ù„Ù„Ø¥Ø¶Ø§ÙØ©
	var color_removed = Color(1, 0, 0, 0.15) # Ø£Ø­Ù…Ø± ÙØ§ØªØ­ Ù„Ù„Ø­Ø°Ù
	var color_mod = Color(1, 1, 0, 0.15)     # Ø£ØµÙØ± Ù„Ù„ØªØ¹Ø¯ÙŠÙ„
	
	for i in range(max_lines):
		var l1 = lines1[i] if i < lines1.size() else ""
		var l2 = lines2[i] if i < lines2.size() else ""
		
		if l1 != l2:
			if l1 == "":
				# Ø³Ø·Ø± Ø¬Ø¯ÙŠØ¯ (Ø£Ø®Ø¶Ø± ÙÙŠ Ø§Ù„ÙŠÙ…ÙŠÙ†)
				new_edit.set_line_background_color(i, color_added)
			elif l2 == "":
				# Ø³Ø·Ø± Ù…Ø­Ø°ÙˆÙ (Ø£Ø­Ù…Ø± ÙÙŠ Ø§Ù„ÙŠØ³Ø§Ø±)
				old_edit.set_line_background_color(i, color_removed)
			else:
				# Ø³Ø·Ø± Ù…Ø¹Ø¯Ù„ (Ø£ØµÙØ± ÙÙŠ Ø§Ù„Ø§Ø«Ù†ÙŠÙ†)
				old_edit.set_line_background_color(i, color_mod)
				new_edit.set_line_background_color(i, color_mod)
